--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section id="Infantil ">
     <h1 class="Title"> O leão e o mosquito    </h1>
     <div class="imagem1">
-    <img src="C:\Users\Thiná Parisi\OneDrive\Área de Trabalho\Thainá\Leão e o Mosquito.jfif" width="600px" > <br> <br>
+    <img src="Leão e o Mosquito.jpg" width="600px" > <br> <br>
     </div>
    </section>
 <div class="text1">
@@ -64,7 +64,7 @@
     <section id="Mágico"></section>
     <h1 class="title3">O mágico de Oz</h1>
     <div class="imagem3">
-    <img src="Magico de OZ.jfif" width="700x" >
+    <img src="Magico de OZ.jpg" width="700x" >
     </div>
 
 
